--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-node_modules
+#node modules
+node_modules/
+#logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+# Environment variables
+.env
+#system files
+.DS_Store
+Thumbs.db
